fix(resource-view): media content not visible on tablet/mobile

--- a/WebContent/resources/layout/sass/components/_resource-view.scss
+++ b/WebContent/resources/layout/sass/components/_resource-view.scss
@@ -43,6 +43,7 @@
       border-bottom: $border-width solid $border-color;
       overflow: initial;
       height: auto;
+      min-width: auto;
     }
   }
 
